--- a/myapp/templates/public/public_layout.html
+++ b/myapp/templates/public/public_layout.html
@@ -468,6 +468,13 @@
                     <li class="nav-item">
                         <a class="nav-link " href="{{url_for('news')}}">News</a>
                     </li>
+                    <hr />
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{url_for('faq')}}">FAQ</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link " href="{{url_for('news')}}">News</a>
+                    </li>
                 </ul>
                 <!-- Left links -->
             </div>
@@ -516,11 +523,11 @@
             <div class="d-flex align-items-center">
                 <div class="d-none d-md-block" style="font-size: 15px;">
                     <a class="text-reset sec-nave-links me-3" href="https://hemis.hu.edu.so/">
-                        Hemis Number
+                        HEMSI No.
                     </a>
                     <!-- Icon -->
                     <a class="text-reset sec-nave-links me-3" href="http://portal.hu.edu.so/">
-                        HU portal
+                        HU Student Portal
                     </a>
                     <!-- <span class="vertical-line"></span> -->
 
@@ -828,8 +835,8 @@
                         </div>
                     </div>
                 </div>
-                <a href="{{url_for('faq')}}" class=" ps-4 d-flex accordion_topic mt-2" id="faqgreen_hover">FAQ</a>
-                <a href="{{url_for('news')}}" class=" ps-4 d-flex accordion_topic mt-2" id="faqgreen_hover">News</a>
+                <a href="https://hemis.hu.edu.so/" class=" ps-4 d-flex accordion_topic mt-2" id="faqgreen_hover">HEMIS No.</a>
+                <a href="http://portal.hu.edu.so/" class=" ps-4 d-flex accordion_topic mt-2" id="faqgreen_hover">HU Student Portal</a>
 
             </div>
         </div>
