Waxaan beddelay dhammaan sawirrada qalib-jebiyayaasha waxaan ka dhigay 2024. Waxay ahaayeen 2023.

--- a/myapp/templates/public/index.html
+++ b/myapp/templates/public/index.html
@@ -259,7 +259,7 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary text-capitalize" data-bs-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-primary text-capitalize">Save changes</button>
+
                 </div>
                 </div>
             </div>
@@ -273,17 +273,17 @@
                                 <span class="v2_font fs-1 fw-bold ">
                                     29
                                 </span>
-                                <span class="v2_font">DECEMBER</span>
+                                <span class="v2_font">DECEMBER  </span>
                             </div>
                             <div class="col">
                                 We are excited to announce the upcoming Graduation Ceremony of, which will be held
                                 at
                                 <span class="text-success fw-bold">
-                                    8:00 AM - 5:00 PM.
+                                    8:00 AM - 5:00 PM. <sup class="badge-warning border border-warning px-2 rounded-3">Tentative</sup>
                                 </span>
 
                                 <div class="text-end">
-                                    <a href="" class="text-blue all_events text-decoration-none">Read more
+                                    <a href="#" class="text-blue all_events text-decoration-none" data-bs-toggle="modal" data-bs-target="#exploreUppcommingEvents">Read more
 
                                         <span class="ms-3">
                                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
@@ -616,10 +616,9 @@
 <!-- Last Event Memories Section -->
 <section class="mt-5">
     <div class="container mb-3">
-        <h2 class="display-5 v2_font" style="color: #168055;">Last Event Memories</h2>
+        <h2 class="display-5 v2_font" style="color: #168055;">Gallery Glimpses</h2>
         <div class="text-muted">
-            Mogadishu 7 December, 2023: The Annual Summit of the Somali Research Universities of Mogadishu, Banadir
-            and Hormuud was held in Mogadishu.
+            Showcasing Exams, Convocation, Buildings, Students, Events, Orientations, Training, and Others.
         </div>
     </div>
 
