--- a/myapp/templates/article/reading_article.html
+++ b/myapp/templates/article/reading_article.html
@@ -43,7 +43,7 @@
                         <div class="card position-relative rounded">
                             <div class="card-img-container ">
                                 <a href="#">
-                                    <img src="{{ data.article_info.img }}"
+                                    <img src="https://hu.edu.so/article_imgs/{{ data.article_info.img }}"
                                     class="card-img-top " alt="..." style="height: 600px;" >
                                     
                                 </a>
