Waxaan saxay sawiirada galary oo ahaa beta.hu.edu.so waxaan ka dhigay hu.edu.so

--- a/myapp/templates/public/index.html
+++ b/myapp/templates/public/index.html
@@ -669,7 +669,7 @@
                                 {%if gallery_images%}
                                 {%for image in gallery_images%}
                                 {%if image.img_category == "Exams"%}
-                                <div class="slides" style="--img: url('https://beta.hu.edu.so/gallery/{{image.img_path}}')"></div>
+                                <div class="slides" style="--img: url('https://hu.edu.so/gallery/{{image.img_path}}')"></div>
                                 {%else%}
                                 <div class="slides"
                                     style="background-color: #f1f1f1; display: flex; justify-content: center; align-items: center;">
@@ -708,7 +708,7 @@
                                 {%if gallery_images%}
                                 {%for image in gallery_images%}
                                 {%if image.img_category == "Convocational Ceremony"%}
-                                <div class="slides" style="--img: url('https://beta.hu.edu.so/gallery/{{image.img_path}}')"></div>
+                                <div class="slides" style="--img: url('https://hu.edu.so/gallery/{{image.img_path}}')"></div>
                                 {%else%}
                                 <div class="slides"
                                     style="background-color: #f1f1f1; display: flex; justify-content: center; align-items: center;">
@@ -747,7 +747,7 @@
                                 {%if gallery_images%}
                                 {%for image in gallery_images%}
                                 {%if image.img_category == "Building"%}
-                                <div class="slides" style="--img: url('https://beta.hu.edu.so/gallery/{{image.img_path}}')"></div>
+                                <div class="slides" style="--img: url('https://hu.edu.so/gallery/{{image.img_path}}')"></div>
                                 {%else%}
                                 <div class="slides"
                                     style="background-color: #f1f1f1; display: flex; justify-content: center; align-items: center;">
@@ -786,7 +786,7 @@
                                 {%if gallery_images%}
                                 {%for image in gallery_images%}
                                 {%if image.img_category == "Students"%}
-                                <div class="slides" style="--img: url('https://beta.hu.edu.so/gallery/{{image.img_path}}')"></div>
+                                <div class="slides" style="--img: url('https://hu.edu.so/gallery/{{image.img_path}}')"></div>
                                 {%else%}
                                 <div class="slides"
                                     style="background-color: #f1f1f1; display: flex; justify-content: center; align-items: center;">
@@ -825,7 +825,7 @@
                                 {%if gallery_images%}
                                 {%for image in gallery_images%}
                                 {%if image.img_category == "Events"%}
-                                <div class="slides" style="--img: url('https://beta.hu.edu.so/gallery/{{image.img_path}}')"></div>
+                                <div class="slides" style="--img: url('https://hu.edu.so/gallery/{{image.img_path}}')"></div>
                                 {%else%}
                                 <div class="slides"
                                     style="background-color: #f1f1f1; display: flex; justify-content: center; align-items: center;">
@@ -864,7 +864,7 @@
                                 {%if gallery_images%}
                                 {%for image in gallery_images%}
                                 {%if image.img_category == "Orientations"%}
-                                <div class="slides" style="--img: url('https://beta.hu.edu.so/gallery/{{image.img_path}}')"></div>
+                                <div class="slides" style="--img: url('https://hu.edu.so/gallery/{{image.img_path}}')"></div>
                                 {%else%}
                                 <div class="slides"
                                     style="background-color: #f1f1f1; display: flex; justify-content: center; align-items: center;">
@@ -903,7 +903,7 @@
                                 {%if gallery_images%}
                                 {%for image in gallery_images%}
                                 {%if image.img_category == "training"%}
-                                <div class="slides" style="--img: url('https://beta.hu.edu.so/gallery/{{image.img_path}}')"></div>
+                                <div class="slides" style="--img: url('https://hu.edu.so/gallery/{{image.img_path}}')"></div>
                                 {%else%}
                                 <div class="slides"
                                     style="background-color: #f1f1f1; display: flex; justify-content: center; align-items: center;">
@@ -942,7 +942,7 @@
                                 {%if gallery_images%}
                                 {%for image in gallery_images%}
                                 {%if image.img_category == "Others"%}
-                                <div class="slides" style="--img: url('https://beta.hu.edu.so/gallery/{{image.img_path}}')"></div>
+                                <div class="slides" style="--img: url('https://hu.edu.so/gallery/{{image.img_path}}')"></div>
                                 {%else%}
                                 <div class="slides"
                                     style="background-color: #f1f1f1; display: flex; justify-content: center; align-items: center;">
